--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         text-decoration: none;
         font-size: 20px;
       }
-      .topnav a.logo{
-        
+      .logo{
+        vertical-align: middle;
       }
     </style>
   </head>
   <body>
     <div class="topnav">
-      <a>class="logo"</a>
+      <a href="#logo"> <img class="logo" src="Ayomide Ibidapo.svg" alt="logo"></a>
       <a class="active" href="#ux-design">UX Design</a>
       <a href="#graphic-design">Graphic Design</a>
       <a href="#photography">Photography</a>
