--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
       .topnav a{
         float: left;
         color: #FDEFC8;
-        text-align: center;
-        padding: 40px 20px 40px 40px;
+        
+        padding: 0px 0px 0px 0px;
         text-decoration: none;
-        font-size: 20px;
+        font-size: 15px;
       }
       .logo{
-        vertical-align: middle;
+        width: 55%;
+        height: auto;
+        float: left;
       }
     </style>
   </head>
