--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <div class="topnav">
-      <a href="#logo"> <img class="logo" src="Ayomide Ibidapo.svg" alt="logo"></a>
+      <a class="logo" href="#logo"> <img src="Ayomide Ibidapo.svg" alt="logo"></a>
       <a class="active" href="#ux-design">UX Design</a>
       <a href="#graphic-design">Graphic Design</a>
       <a href="#photography">Photography</a>
