--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         justify-content: space-between; /* Separate the text and list */
         align-items: center; /* Center items vertically */
         padding: 5px 10px 5px 10px; /* Add some padding for spacing */
-        position: fixed;
+        position: static;
         bottom: 0;
         width: 100%;  
         
@@ -84,16 +84,16 @@
       }
       .homepageimg {
         width: 100%;
-        height: 60%;
+        height: auto;
         max-height: 700px;
         position: relative;
         padding: 150px;
       }
       .homepage-flowers1 {
-        width: 35%;
+        width: 38%;
         height: auto;
         position: absolute;
-        top: 70;
+        top: 65;
         right: -30;
       }
       
