i think we good

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         height: auto;
         max-height: 700px;
         position: relative;
-        padding: 150px;
+        padding: 40px 30px 50px 50px;
       }
       .homepage-flowers1 {
         width: 38%;
