--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         background-color: #FDEFC8;
         margin: 0;
         padding: 0;
+        overflow-x: hidden;
       }
       .topnav {
         background-color: #515b3a;
@@ -17,6 +18,7 @@
         align-items: center; /* Vertically align items */
         padding: 30px 20px 20px; /* Add some padding for spacing */
         width: 100%;
+        box-sizing: border-box;
       }
       .bottomnav {
         background-color: #515b3a;
@@ -27,6 +29,7 @@
         padding: 25px 20px 10px 20px; /* Add some padding for spacing */
         position: relative;
         bottom: 0;
+        box-sizing: border-box;
         
         font-family: "Sen", sans serif;
         font-size: 20px;
@@ -88,14 +91,14 @@
         height: auto;
         max-height: 700px;
         position: relative;
-        padding: 40px 30px 50px 50px;
+        padding: 40px 30px;
       }
       .homepage-flowers1 {
         width: 30%;
         height: auto;
         position: absolute;
         top: 45;
-        right: -39;
+        right: 0;
       }
       .homepage-flowers2 {
         width: 59%;
