--- a/index.html
+++ b/index.html
@@ -10,24 +10,54 @@
         background-color: #FDEFC8;
         margin: 0;
         padding: 0;
-        overflow-x: hidden;
+        overflow-x: hidden; /*
+          Code copied from:     https://www.w3schools.com/cssref/css3_pr_overflow-x.php
+          Author: w3school
+          Name: CSS overflow-x Property
+          Description: Explains how overflow-x works
+          Date retrieved: 12/08/24
+          */
       }
       p {
         font-size: 35px;
       }
       .topnav {
         background-color: #515b3a;
-        display: flex; 
-        align-items: center;
+        display: flex; /*
+          Code copied from: https://www.w3schools.com/css/css3_flexbox.asp
+          Author: w3school
+          Name: CSS Flexbox
+          Description: Explains what Flexbox is and how display:flex is used
+          Date retrieved: 12/05/24
+          */
+        align-items: center; /*
+          Code copied from: https://www.w3schools.com/cssref/css3_pr_align-items.php
+          Author: w3school
+          Name: CSS align-items Property
+          Description: Explains how align-items worked
+          Date retrieved: 12/05/24
+          */
         padding: 60px 20px 20px;
         width: 100%;
-        box-sizing: border-box;
+        box-sizing: border-box; /*
+          Code copied from: https://www.w3schools.com/css/css3_box-sizing.asp
+          Author: w3school
+          Name: CSS Box Sizing
+          Description: Explains how box sizing works
+          Date retrieved: 12/05/24
+          */
       }
       .bottomnav {
         background-color: #515b3a;
         width: 100%;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-between; /*
+          Code copied from: https://www.w3schools.com/cssref/css3_pr_justify-content.php
+          Author: w3school
+          Name: CSS justify-content Property
+          Description: Explains how justify-content works
+          Date retrieved: 12/05/24
+          */
         align-items: center; 
         padding: 0px 20px 0px 20px;
         position: relative;
@@ -144,7 +174,13 @@
       <div class="bottomnav">
         <p>
          Lets create something fun! <br>
-          <a style="text-decoration:none;color:#FDEFC8;font-size:30px;" href="mailto:aibidapo@uwaterloo.ca">aibidapo@uwaterloo.ca <3 </a>
+          <a style="text-decoration:none;color:#FDEFC8;font-size:30px;" href="mailto:aibidapo@uwaterloo.ca">aibidapo@uwaterloo.ca <3 </a> <!--
+          Code copied from: https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_link_mailto
+          Author: w3school
+          Name: HTML mailto
+          Description: Explains how mail to links work
+          Date retrieved: 12/09/24
+          -->
         </p>
       
         <ul class="bottomlist">
