--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   </head>
   <body>
     <div class="topnav">
-      <a class="logo" href="#logo"> <img src="Ayomide Ibidapo.svg" alt="logo"></a>
+      <a class="logo" href="#logo"> <img src="Ayomide Ibidapo.svg" alt="logo named 'Ayomide Ibidapo'"></a>
       <ul class="top">
         <li><a href="#ux-design">UX Design</a></li>
         <li><a href="#graphic-design">Graphic Design</a></li>
@@ -161,14 +161,14 @@
     </div>
   
     <div>
-      <img class="homepage-flowers1" src="Sakura Right.png" alt="Flowers on right side">
+      <img class="homepage-flowers1" src="Sakura Right.png" alt="Pink Sakura Flowers on top right side of page">
     </div>
     <div>
-      <img class="homepage-flowers2" src="Sakura Left 1.png" alt="Flowers on left side">
+      <img class="homepage-flowers2" src="Sakura Left 1.png" alt="Pink Sakura Flowers on bottom left side of page">
     </div>
 
     <div class="homepage">
-      <img class="homepageimg" src="Homepage.svg" alt="homepage">
+      <img class="homepageimg" src="Homepage.svg" alt="Homepage screen consisting of Hello message, description of who Ayomide is and a picture of Ayomide">
     </div>
       
       <div class="bottomnav">
