--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   </head>
   <body>
     <div class="topnav">
-      <a class="logo" href="#logo"> <img src="Ayomide Ibidapo.svg" alt="logo named 'Ayomide Ibidapo'"></a>
+      <a class="logo" href="https://apieceofmide.github.io/personal-website-assignment/"> <img src="Ayomide Ibidapo.svg" alt="logo named 'Ayomide Ibidapo'"></a>
       <ul class="top">
         <li><a href="https://apieceofmide.github.io/ux-design-page/">UX Design</a></li>
         <li><a href="https://apieceofmide.github.io/graphic-design-page/">Graphic Design</a></li>
