--- a/index.html
+++ b/index.html
@@ -134,11 +134,12 @@
         right: 0;
       }
       .homepage-flowers2 {
-        width: 59%;
+        width: 25%;
         height: auto;
         position: absolute;
-        bottom: -270;
-        left: -486;
+        top: 400;
+        bottom: 0;
+        left: 0;
       }
       .homepage {
         display: flex;
@@ -164,7 +165,7 @@
       <img class="homepage-flowers1" src="Sakura Right.png" alt="Pink Sakura Flowers on top right side of page">
     </div>
     <div>
-      <img class="homepage-flowers2" src="Sakura Left 1.png" alt="Pink Sakura Flowers on bottom left side of page">
+      <img class="homepage-flowers2" src="Sakura Left.png" alt="Pink Sakura Flowers on bottom left side of page">
     </div>
 
     <div class="homepage">
