--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         height: auto;
         position: absolute;
         
-        bottom: -400;
+        bottom: 60px;
         left: 0;
       }
       .homepage {
