--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           Description: Explains how overflow-x works
           Date retrieved: 12/08/24
           */
+        position: relative;
       }
       p {
         font-size: 35px;
@@ -138,7 +139,7 @@
         height: auto;
         position: absolute;
         
-        bottom: 60px;
+        bottom: 80px;
         left: 0;
       }
       .homepage {
